Fixed image cropping and replaced font with Roboto Mono.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i&display=swap'); */
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,700,700i&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,700,700i&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i&display=swap');
 @import url('css/crt.css');
 @import url('css/Profiles.css');
 @import url('css/Profile.css');
@@ -17,7 +18,7 @@
 
 .App {
 	text-align: center;
-	font-family: 'Source Code Pro', monospace;
+	font-family: 'Roboto Mono', monospace;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
